--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 ../../data/* filter=lfs diff=lfs merge=lfs -text
 D:/ilib/AIFilter/data/* filter=lfs diff=lfs merge=lfs -text
+D:/ilib/AIFilter/outputs/* filter=lfs diff=lfs merge=lfs -text
+../../outputs/* filter=lfs diff=lfs merge=lfs -text
